conformance/tests/httproute-rule-order.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rule-order
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /rule-order
      headers:
      - name: x-version
        value: one
      - name: x-color
        value: blue
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /rule-order
      headers:
      - name: x-color
        value: blue
      - name: x-version
        value: one
    backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rule-order-invalid-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /rule-order-invalid-backend
    backendRefs:
    - name: nonexistent
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /rule-order-invalid-backend
    backendRefs:
    - name: infra-backend-v2
      port: 8080
